выдача токенов доступа

--- a/way2mars/АдминкаLib/Интерфейс/ФормаСпискаМетаданных.yaml
+++ b/way2mars/АдминкаLib/Интерфейс/ФормаСпискаМетаданных.yaml
@@ -5,6 +5,14 @@
 Наследует:
     Тип: Форма
     ВключатьВАвтоИнтерфейс: Ложь
+    ДополнительныеКоманды:
+        Тип: ФрагментКомандногоИнтерфейса
+        Элементы:
+            -
+                Тип: ОбычнаяКоманда
+                Видимость: =не ОбновлениеДанных
+                Обработчик: КомандаОбновитьОбработчик
+                Представление: ОбычнаяКоманда
     Содержимое:
         Тип: ПроизвольныйШаблонФормы
         Содержимое:
@@ -74,6 +82,7 @@
                                 Представление: КомандаСПараметром
                 -
                     Тип: Группа
+                    Видимость: =ОбновлениеДанных
                     ВыравниваниеСодержимогоПоВертикали: Центр
                     ВыравниваниеСодержимогоПоГоризонтали: Центр
                     ИнтервалМеждуЭлементамиПоВертикали: Двойной
@@ -108,3 +117,6 @@
         Имя: СтатусЗагрузки
         Тип: Строка
         ЗначениеПоУмолчанию: Загрузка объектов метаданных...
+    -
+        Имя: ОбновлениеДанных
+        Тип: Булево
