--- a/way2mars/АдминкаLib/Пользователи/Интерфейс/КомпонентСтрокаСпискаИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/Интерфейс/КомпонентСтрокаСпискаИзменений.yaml
@@ -11,46 +11,46 @@
             -
                 Тип: Флажок
                 Вид: Флажок
+                ВыравниваниеВГруппеПоВертикали: Центр
                 Доступность: =Статус!=СтатусИзменения.Успех
                 Значение: =Выбор
             -
                 Тип: Группа
+                ВыравниваниеВГруппеПоВертикали: Центр
+                ВыравниваниеСодержимогоПоВертикали: Центр
                 ИнтервалМеждуЭлементамиПоВертикали: Отсутствует
                 Компоновка: Вертикальная
                 Содержимое:
                     -
-                        Тип: Группа
-                        Компоновка: Горизонтальная
-                        Содержимое:
-                            -
-                                Тип: Надпись
-                                Значение: =ИмяДействия
-                                РастягиватьПоГоризонтали: Истина
-                            -
-                                Тип: Картинка
-                                Видимость: =Статус==СтатусИзменения.Запущен
-                                ВыравниваниеВГруппеПоВертикали: Центр
-                                Изображение: запущен.svg
-                                Ширина: 20
-                            -
-                                Тип: Картинка
-                                Видимость: =Статус==СтатусИзменения.Ошибка
-                                ВыравниваниеВГруппеПоВертикали: Центр
-                                Изображение: ошибка.svg
-                                Ширина: 20
-                            -
-                                Тип: Картинка
-                                Видимость: =Статус==СтатусИзменения.Успех
-                                ВыравниваниеВГруппеПоВертикали: Центр
-                                Изображение: успех.svg
-                                Ширина: 20
+                        Тип: Надпись
+                        ВыравниваниеВГруппеПоВертикали: Низ
+                        Значение: =ИмяДействия
+                        МаксимальнаяВысотаВСтроках: 3
+                        РастягиватьПоГоризонтали: Истина
                     -
                         Тип: Надпись
                         Видимость: =Статус==СтатусИзменения.Ошибка
                         Значение: =ТекстОшибки
+                        МаксимальнаяВысотаВСтроках: 3
                         ОценкаИнформации: Отрицательная
-                        Шрифт:
-                            Тип: АбсолютныйШрифт
+            -
+                Тип: Картинка
+                Видимость: =Статус==СтатусИзменения.Запущен
+                ВыравниваниеВГруппеПоВертикали: Центр
+                Изображение: запущен.svg
+                Ширина: 20
+            -
+                Тип: Картинка
+                Видимость: =Статус==СтатусИзменения.Ошибка
+                ВыравниваниеВГруппеПоВертикали: Центр
+                Изображение: ошибка.svg
+                Ширина: 20
+            -
+                Тип: Картинка
+                Видимость: =Статус==СтатусИзменения.Успех
+                ВыравниваниеВГруппеПоВертикали: Центр
+                Изображение: успех.svg
+                Ширина: 20
 Свойства:
     -
         Имя: Выбор
