--- a/way2mars/АдминкаLib/Пользователи/Интерфейс/ФормаОбъектаПользователь.yaml
+++ b/way2mars/АдминкаLib/Пользователи/Интерфейс/ФормаОбъектаПользователь.yaml
@@ -22,21 +22,9 @@
                 Доступность: Истина
                 ИзображениеАктивного: ЗамокОткрытыйКонтур.svg
                 ИзображениеНеактивного: ЗамокКонтур.svg
-                ОпасностьДействия: Отсутствует
+                ОпасностьДействия: Средняя
                 ПредставлениеАктивного: Редактирование
                 ПредставлениеНеактивного: Просмотр
-    ОбычныеКоманды:
-        Тип: ФрагментКомандногоИнтерфейса
-        Элементы:
-            -
-                Тип: ОбычнаяКоманда
-                Важность: Обычная
-                Видимость: Истина
-                Доступность: Истина
-                Изображение: КлючКонтур.svg
-                Обработчик: ВыдатьТокенОбработчик
-                ОпасностьДействия: Отсутствует
-                Представление: Выдать токен
     ОсновнаяКоманда:
         Тип: ОбычнаяКоманда
         Важность: Обычная
@@ -202,6 +190,7 @@
                                 Тип: Таблица<ИсточникДанныхМассив<СвойстваУтвержденияПользователя>>
                                 Имя: ТаблицаУтверждения
                                 ОтображатьНастройки: Ложь
+                                ОтображениеПоляПоиска: ВПанелиКоманд
                                 ТолькоЧтение: =не РазрешитьПравки
                                 Источник: =Утверждения
                                 Колонки:
@@ -234,7 +223,11 @@
                             Содержимое:
                                 Тип: Таблица<ИсточникДанныхМассив<СвойстваТокенаДоступа>>
                                 Имя: ТаблицаТокеныДоступа
+                                ИспользованиеПоиска:
+                                    Тип: Авто
+                                    Значение: Auto
                                 ОтображатьНастройки: Ложь
+                                ОтображениеПоляПоиска: ВПанелиКоманд
                                 ТолькоЧтение: =не РазрешитьПравки
                                 Источник: =ТокеныДоступа
                                 Колонки:
@@ -250,11 +243,27 @@
                                 Команды:
                                     Тип: ФрагментКомандногоИнтерфейса
                                     Элементы:
-                                        - =Компоненты.ТаблицаУтверждения.ДобавитьСтроку
+                                        -
+                                            Тип: ОбычнаяКоманда
+                                            Важность: Обычная
+                                            Видимость: Истина
+                                            Доступность: =РазрешитьПравки
+                                            Изображение: добавить_строку.svg
+                                            Обработчик: ДобавитьТокенОбработчик
+                                            ОпасностьДействия: Отсутствует
+                                            Представление: Добавить токен
                                 КомандыСтроки:
                                     Тип: ФрагментКомандногоИнтерфейса<КомандаСПараметром<СвойстваТокенаДоступа>>
                                     Элементы:
-                                        - =Компоненты.ТаблицаТокеныДоступа.Удалить
+                                        -
+                                            Тип: КомандаСПараметром<СвойстваТокенаДоступа>
+                                            Важность: Высокая
+                                            Видимость: =РазрешитьПравки
+                                            Доступность: Истина
+                                            Изображение: МусорнаяКорзина.svg
+                                            Обработчик: УдалитьТокенОбработчик
+                                            ОпасностьДействия: Высокая
+                                            Представление: Удалить токен
                                 ПустыеСостояния:
                                     Тип: ПредставленияПустыхСостоянийСписка
                                     НетДанныхДляОтображения:
@@ -264,6 +273,20 @@
                                             Тип: ДвоичныйОбъект.Ссылка
                                             Значение: ФайлКонтур.svg
                                         Пояснение: Токены доступа отсутствуют
+                                    НетРезультатовПоиска:
+                                        Тип: ПредставлениеПустогоСостоянияСписка
+                                        Заголовок: Поиск
+                                        Изображение:
+                                            Тип: ДвоичныйОбъект.Ссылка
+                                            Значение: ФайлКонтур.svg
+                                        Пояснение: Ничего не найдено
+                                    НетРезультатовФильтрации:
+                                        Тип: ПредставлениеПустогоСостоянияСписка
+                                        Заголовок: Фильтрация
+                                        Изображение:
+                                            Тип: ДвоичныйОбъект.Ссылка
+                                            Значение: ФайлКонтур.svg
+                                        Пояснение: Ничего не найдено
 Свойства:
     -
         Имя: Пользователь
