В список метаданных добавлены планы обмена

--- a/way2mars/admin_tools/ТестовыеМетаданные/РегистрСведенийНепериодический.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/РегистрСведенийНепериодический.yaml
@@ -1,7 +1,7 @@
 ВидЭлемента: РегистрСведений
 Ид: 40de55c8-083f-4405-9c74-5f0a3b542bac
 Имя: РегистрСведенийНепериодический
-ОбластьВидимости: ВПодсистеме
+ОбластьВидимости: ВПроекте
 Измерения:
     -
         Ид: 616d3b15-99a4-4e24-967b-82f00c9ff3bf
