--- a/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
@@ -1,7 +1,7 @@
 ВидЭлемента: Справочник
 Ид: f39d00c0-df15-4598-a508-61fa99778b34
 Имя: СправочникУуид7
-ОбластьВидимости: ВПодсистеме
+ОбластьВидимости: ВПроекте
 Интерфейс:
     ВключатьВАвтоИнтерфейс: Истина
     Объект:
