--- a/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
+++ b/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
@@ -1,11 +1,12 @@
 ВидЭлемента: КомпонентИнтерфейса
-ОбластьВидимости: ВПодсистеме
 Ид: 746956a0-0460-45bf-bcc1-a0e890e0aaf0
 Имя: ТестовоеКлиентскоеПриложение
+ОбластьВидимости: ВПодсистеме
 Импорт:
     - way2mars::АдминкаLib::Интерфейс
     - way2mars::АдминкаLib::Интерфейс::СтарыйИнтерфейс
     - way2mars::АдминкаLib::КлючиДоступа
+    - ТестовыеМетаданные
 Наследует:
     Тип: СтандартноеКлиентскоеПриложениеСРазделами
     КомандныйИнтерфейсПанелиНавигации:
@@ -13,17 +14,30 @@
         Элементы:
             -
                 Тип: НавигационнаяКоманда
+                Важность: Обычная
+                Видимость: Истина
+                Доступность: Истина
                 Изображение: БагКонтур.svg
+                ОпасностьДействия: Отсутствует
                 Представление: Админка old
                 ТипФормы: ФормаМетаданные
             -
                 Тип: НавигационнаяКоманда
+                Важность: Обычная
+                Видимость: Истина
+                Доступность: Истина
                 Изображение: БагКонтур.svg
+                ОпасностьДействия: Отсутствует
                 Представление: Админка new
                 ТипФормы: ФормаСпискаМетаданных
             -
                 Тип: НавигационнаяКоманда
+                Важность: Обычная
+                Видимость: Истина
+                Доступность: Истина
                 Изображение: Ключ.svg
+                ОпасностьДействия: Отсутствует
                 Представление: Ключи доступа
                 ТипФормы: ФормаКлючиДоступа
-
+            - =ФормаУдалСпр7.ОткрытьФорму
+            - =ПланОбмена1.ОткрытьСписок
