--- a/way2mars/АдминкаLib/Интерфейс/ВидыМетаданных.yaml
+++ b/way2mars/АдминкаLib/Интерфейс/ВидыМетаданных.yaml
@@ -24,6 +24,9 @@
         Ид: 2126aafc-e7de-487c-922c-2e051923db2d
         Имя: ХранилищеНастроек
     -
+        Ид: fe3dc7e1-9a38-45b9-b8c1-154929256e46
+        Имя: ПланОбмена
+    -
         Ид: 9eaf085b-3f33-4f99-bd9a-8cb9017a8bd6
         Имя: StdХранилищеНастроек
         Представление: Стд::ХранилищеНастроек
