--- a/way2mars/АдминкаLib/Интерфейс/ОбъектМетаданных.yaml
+++ b/way2mars/АдминкаLib/Интерфейс/ОбъектМетаданных.yaml
@@ -25,3 +25,7 @@
     -
         Имя: ПоследнийСсылка
         Тип: Сущность.Ключ?
+    -
+        Имя: СсылочныеРеквизиты
+        Тип: Массив<Строка>
+        ЗначениеПоУмолчанию: []
