Логи, Реструктуризация, ВидыРеквизитов

--- a/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
@@ -2,6 +2,7 @@
 Ид: b3d2e351-16f6-4b54-8990-86ea1fb8a5db
 Имя: Документище
 ОбластьВидимости: ВПодсистеме
+РежимУдаления: Немедленно
 КонтрольДоступа:
     Разрешения:
         Изменение: РазрешеноАдминистраторам
