--- a/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
+++ b/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
@@ -41,3 +41,4 @@
                 ТипФормы: ФормаКлючиДоступа
             - =ФормаУдалСпр7.ОткрытьФорму
             - =ПланОбмена1.ОткрытьСписок
+            - =ФормаУправленияУдалениемДанных.ОткрытьФорму
