--- a/way2mars/АдминкаLib/Интерфейс/ОбъектМетаданных.yaml
+++ b/way2mars/АдминкаLib/Интерфейс/ОбъектМетаданных.yaml
@@ -27,5 +27,5 @@
         Тип: Сущность.Ключ?
     -
         Имя: СсылочныеРеквизиты
-        Тип: Массив<Строка>
+        Тип: Массив<СсылочныйРеквизит>
         ЗначениеПоУмолчанию: []
