--- a/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
@@ -3,6 +3,10 @@
 Имя: Документище
 ОбластьВидимости: ВПодсистеме
 РежимУдаления: Немедленно
+Интерфейс:
+    ВключатьВАвтоИнтерфейс: Истина
+    Объект:
+        Форма: ДокументищеФормаОбъекта
 КонтрольДоступа:
     Разрешения:
         Изменение: РазрешеноАдминистраторам
