--- a/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
@@ -2,6 +2,7 @@
 Ид: f39d00c0-df15-4598-a508-61fa99778b34
 Имя: СправочникУуид7
 ОбластьВидимости: ВПроекте
+РежимУдаления: Немедленно
 Интерфейс:
     ВключатьВАвтоИнтерфейс: Истина
     Объект:
