страницы в админке. удален старый интерфейс

--- a/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
+++ b/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
@@ -4,7 +4,6 @@
 ОбластьВидимости: ВПодсистеме
 Импорт:
     - way2mars::АдминкаLib::Интерфейс
-    - way2mars::АдминкаLib::Интерфейс::СтарыйИнтерфейс
     - way2mars::АдминкаLib::КлючиДоступа
     - ТестовыеМетаданные
 Наследует:
@@ -19,16 +18,7 @@
                 Доступность: Истина
                 Изображение: БагКонтур.svg
                 ОпасностьДействия: Отсутствует
-                Представление: Админка old
-                ТипФормы: ФормаМетаданные
-            -
-                Тип: НавигационнаяКоманда
-                Важность: Обычная
-                Видимость: Истина
-                Доступность: Истина
-                Изображение: БагКонтур.svg
-                ОпасностьДействия: Отсутствует
-                Представление: Админка new
+                Представление: Админка
                 ТипФормы: ФормаСпискаМетаданных
             -
                 Тип: НавигационнаяКоманда
