--- a/way2mars/АдминкаLib/Интерфейс/ФормаСпискаМетаданных.yaml
+++ b/way2mars/АдминкаLib/Интерфейс/ФормаСпискаМетаданных.yaml
@@ -2,113 +2,149 @@
 Ид: 02fb7fcf-9255-4b3f-9f78-d3bc45e91882
 Имя: ФормаСпискаМетаданных
 ОбластьВидимости: Глобально
+Импорт:
+    - Пользователи
 Наследует:
     Тип: Форма
     ВключатьВАвтоИнтерфейс: Ложь
     ДополнительныеКоманды:
         Тип: ФрагментКомандногоИнтерфейса
         Элементы:
-            -
-                Тип: ОбычнаяКоманда
-                Видимость: =не ОбновлениеДанных
-                Обработчик: КомандаОбновитьОбработчик
-                Представление: ОбычнаяКоманда
+            - =ФормаКонсолиЗапросов.ОткрытьФорму
+            - =ФормаЗаданий.ОткрытьФорму    
+            - =ФормаЖурналаСобытий.ОткрытьФорму
+            - =Отчеты.ОткрытьАнализДанных
+            - =СтандартноеХранилищеНастроек.ОткрытьСписок
+            - =НавигационнаяКомандаПроцессыИнтеграции
+            - =НавигационнаяКомандаИнформационныеСистемы
     Содержимое:
         Тип: ПроизвольныйШаблонФормы
         Содержимое:
-            Тип: СтековаяГруппа
-            Имя: СтековаяГруппаОсновная
-            Содержимое:
+            Тип: Страницы
+            Страницы:
                 -
-                    Тип: Таблица<ИсточникДанныхМассив<ОбъектМетаданных>>
-                    АвтоВыделениеСтроки: Выключено
-                    ИспользоватьВыделениеСтроки: Ложь
-                    ИспользоватьОтметкиСтрок: Ложь
-                    Навигация: ПодгрузкаПриПрокрутке
-                    ОбрабатыватьНажатие: Ложь
-                    ОтображатьНумерациюСтрок: Ложь
-                    Источник: =МассивМетаданных
-                    Колонки:
-                        -
-                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
-                            Вид: Текст
-                            Заголовок: Объект метаданных
-                            МинимальнаяШирина: 40
-                            ОбрабатыватьНажатие: Истина
-                            ОтключитьСортировку: Ложь
-                            ПолеЗначения: Название
-                            ПриНажатии: КликПоСсылке
-                            ТолькоЧтение: Истина
-                        -
-                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
-                            Заголовок: Вид метаданных
-                            Изображение: =ДанныеСтроки.Вид.Иконка()
-                            МаксимальнаяШирина: 210
-                            МинимальнаяШирина: 40
-                            ПолеЗначения: Вид
-                            ТолькоЧтение: Истина
-                        -
-                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
-                            Вид: Текст
-                            Заголовок: Всего
-                            МаксимальнаяШирина: 80
-                            МинимальнаяШирина: 40
-                            ПолеЗначения: КоличествоЭлементов
-                            ТолькоЧтение: Истина
-                        -
-                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
-                            Заголовок: Удаленные
-                            МаксимальнаяШирина: 80
-                            МинимальнаяШирина: 40
-                            ПолеЗначения: ПомеченныхНаУдаление
-                            ТолькоЧтение: Истина
-                        -
-                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
-                            Заголовок: Последний элемент
-                            МинимальнаяШирина: 40
-                            ПолеЗначения: ПоследнийСсылка
-                            ТолькоЧтение: Истина
-                    КомандыСтроки:
-                        Тип: ФрагментКомандногоИнтерфейса<КомандаСПараметром<ОбъектМетаданных>>
-                        Элементы:
-                            -
-                                Тип: КомандаСПараметром<ОбъектМетаданных>
-                                Важность: Обычная
-                                Видимость: Истина
-                                Доступность: Истина
-                                Изображение: ОткрытьСсылку.svg
-                                Обработчик: ОбработчикСтроки
-                                ОпасностьДействия: Отсутствует
-                                Представление: КомандаСПараметром
-                -
-                    Тип: Группа
-                    Видимость: =ОбновлениеДанных
-                    ВыравниваниеСодержимогоПоВертикали: Центр
-                    ВыравниваниеСодержимогоПоГоризонтали: Центр
-                    ИнтервалМеждуЭлементамиПоВертикали: Двойной
-                    Компоновка: Вертикальная
-                    РастягиватьПоВертикали: Истина
-                    РастягиватьПоГоризонтали: Истина
+                    Имя: СтраницаМетаданные
+                    Заголовок: Метаданные
                     Содержимое:
-                        -
-                            Тип: Картинка
-                            АдаптацияКЦветуКонтейнера: Ложь
-                            ВыравниваниеВГруппеПоГоризонтали: Центр
-                            Изображение: загрузка_бд.svg
-                            МаксимальнаяВысота: 256
-                            МаксимальнаяШирина: 256
-                            МинимальнаяВысота: 128
-                            МинимальнаяШирина: 128
-                            РастягиватьПоВертикали: Ложь
-                            РастягиватьПоГоризонтали: Истина
-                            Цвет: =Цвета.Стилевые.Текст
-                        -
-                            Тип: Надпись
-                            Имя: СтатусЗагрузки
-                            ВыравниваниеВГруппеПоГоризонтали: Центр
-                            ВыравниваниеСодержимогоПоГоризонтали: Центр
-                            Значение: =СтатусЗагрузки
-                            Шрифт: =СтилевыеШрифты.ЗаголовокКрупный
+                        Тип: ГруппаСПлавающимКомпонентом
+                        ПлавающийКомпонент:
+                            Картинка:
+                                Изображение: Перечитать.svg
+                            Команды: =Обновить
+                        Содержимое:
+                            Тип: СтековаяГруппа
+                            Имя: СтековаяГруппаОсновная
+                            Содержимое:
+                                -
+                                    Тип: Таблица<ИсточникДанныхМассив<ОбъектМетаданных>>
+                                    АвтоВыделениеСтроки: Выключено
+                                    ИспользоватьВыделениеСтроки: Ложь
+                                    ИспользоватьОтметкиСтрок: Ложь
+                                    Навигация: ПодгрузкаПриПрокрутке
+                                    ОбрабатыватьНажатие: Ложь
+                                    ОтображатьНумерациюСтрок: Ложь
+                                    Источник: =МассивМетаданных
+                                    Колонки:
+                                        -
+                                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
+                                            Вид: Текст
+                                            Заголовок: Объект метаданных
+                                            МинимальнаяШирина: 40
+                                            ОбрабатыватьНажатие: Истина
+                                            ОтключитьСортировку: Ложь
+                                            ПолеЗначения: Название
+                                            ПриНажатии: КликПоСсылке
+                                            ТолькоЧтение: Истина
+                                        -
+                                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
+                                            Заголовок: Вид метаданных
+                                            Изображение: =ДанныеСтроки.Вид.Иконка()
+                                            МаксимальнаяШирина: 210
+                                            МинимальнаяШирина: 40
+                                            ПолеЗначения: Вид
+                                            ТолькоЧтение: Истина
+                                        -
+                                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
+                                            Вид: Текст
+                                            Заголовок: Всего
+                                            МаксимальнаяШирина: 80
+                                            МинимальнаяШирина: 40
+                                            ПолеЗначения: КоличествоЭлементов
+                                            ТолькоЧтение: Истина
+                                        -
+                                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
+                                            Заголовок: Удаленные
+                                            МаксимальнаяШирина: 80
+                                            МинимальнаяШирина: 40
+                                            ПолеЗначения: ПомеченныхНаУдаление
+                                            ТолькоЧтение: Истина
+                                        -
+                                            Тип: СтандартнаяКолонкаТаблицы<ОбъектМетаданных>
+                                            Заголовок: Последний элемент
+                                            МинимальнаяШирина: 40
+                                            ПолеЗначения: ПоследнийСсылка
+                                            ТолькоЧтение: Истина
+                                    КомандыСтроки:
+                                        Тип: ФрагментКомандногоИнтерфейса<КомандаСПараметром<ОбъектМетаданных>>
+                                        Элементы:
+                                            -
+                                                Тип: КомандаСПараметром<ОбъектМетаданных>
+                                                Важность: Обычная
+                                                Видимость: Истина
+                                                Доступность: Истина
+                                                Изображение: ОткрытьСсылку.svg
+                                                Обработчик: ОбработчикСтроки
+                                                ОпасностьДействия: Отсутствует
+                                                Представление: КомандаСПараметром
+                                -
+                                    Тип: Группа
+                                    Видимость: =ОбновлениеМетаданных
+                                    ВыравниваниеСодержимогоПоВертикали: Центр
+                                    ВыравниваниеСодержимогоПоГоризонтали: Центр
+                                    ИнтервалМеждуЭлементамиПоВертикали: Двойной
+                                    Компоновка: Вертикальная
+                                    РастягиватьПоВертикали: Истина
+                                    РастягиватьПоГоризонтали: Истина
+                                    Содержимое:
+                                        -
+                                            Тип: Картинка
+                                            АдаптацияКЦветуКонтейнера: Ложь
+                                            ВыравниваниеВГруппеПоГоризонтали: Центр
+                                            Изображение: загрузка_бд.svg
+                                            МаксимальнаяВысота: 256
+                                            МаксимальнаяШирина: 256
+                                            МинимальнаяВысота: 128
+                                            МинимальнаяШирина: 128
+                                            РастягиватьПоВертикали: Ложь
+                                            РастягиватьПоГоризонтали: Истина
+                                            Цвет: =Цвета.Стилевые.Текст
+                                        -
+                                            Тип: Надпись
+                                            Имя: СтатусЗагрузки
+                                            ВыравниваниеВГруппеПоГоризонтали: Центр
+                                            ВыравниваниеСодержимогоПоГоризонтали: Центр
+                                            Значение: =СтатусЗагрузки
+                                            Шрифт: =СтилевыеШрифты.ЗаголовокКрупный
+                -
+                    Имя: СтраницаЖурналСобытий
+                    Заголовок: ЖурналСобытий
+                    Содержимое:
+                        Тип: ФормаЖурналаСобытий
+                -
+                    Имя: СтраницаУдаленияДанных
+                    Заголовок: Удаление данных
+                    Содержимое:
+                        Тип: ФормаУправленияУдалениемДанных
+                -
+                    Имя: СтраницаЗадания
+                    Заголовок: Задания
+                    Содержимое:
+                        Тип: ФормаЗаданий
+                -
+                    Имя: СтраницаСистемаВзаимодействия
+                    Заголовок: Система взаимодействия
+                    Содержимое:
+                        Тип: ФормаУправленияСистемойВзаимодействия
 Свойства:
     -
         Имя: МассивМетаданных
@@ -118,5 +154,5 @@
         Тип: Строка
         ЗначениеПоУмолчанию: Загрузка объектов метаданных...
     -
-        Имя: ОбновлениеДанных
+        Имя: ОбновлениеМетаданных
         Тип: Булево
